update with use_grad_clip flag

--- a/configs/c4_a100x8x4_37m.yaml
+++ b/configs/c4_a100x8x4_37m.yaml
@@ -16,6 +16,7 @@ training:
   learning_rate: 7.3e-3
   tokens:
     batch: 256
+  use_grad_clipping: False
 
 model:
   d_model: 256 
@@ -34,6 +35,6 @@ model:
     n_kv: 16 
     d_head: 64
     layers: 8
-    d_ff: 2048 
+    d_ff: 2048
 
 checkpoint_interval: 9200
