--- a/configs/c4_a100x8x4_1b.yaml
+++ b/configs/c4_a100x8x4_1b.yaml
@@ -13,9 +13,10 @@ training:
   warmup_steps: 9250
   steps:        92500
   steps_for_lr: 92500
-  learning_rate: 7.3e-3
+  learning_rate: 7.3e-3  
   tokens:
     batch: 256
+  use_grad_clipping: False
 
 model:
   d_model: 2048
