--- a/configs/c4_a100x8x4_270m.yaml
+++ b/configs/c4_a100x8x4_270m.yaml
@@ -16,6 +16,7 @@ training:
   learning_rate: 7.3e-3
   tokens:
     batch: 256
+  use_grad_clipping: False
 
 model:
   d_model: 1024
@@ -26,8 +27,8 @@ model:
   d_ff: 8192
   vocab: 32768
   rope_max_timescale: 10000
-  a_attn: 1
-  a_output: 1
+  a_attn: 1.
+  a_output: 1.
   base:
     d_model: 256 
     n_q_per_kv: 1
