--- a/configs/c4_a100x8x4_37m.yaml
+++ b/configs/c4_a100x8x4_37m.yaml
@@ -16,7 +16,7 @@ training:
   learning_rate: 7.3e-3
   tokens:
     batch: 256
-  use_grad_clipping: False
+  use_grad_clip: False
 
 model:
   d_model: 256 
