new 37m wide model to mup

--- a/configs/c4_a100x8x4_1b.yaml
+++ b/configs/c4_a100x8x4_1b.yaml
@@ -16,7 +16,7 @@ training:
   learning_rate: 7.3e-3  
   tokens:
     batch: 256
-  use_grad_clip: False
+  use_grad_clip: false
 
 model:
   d_model: 2048
