--- a/configs/c4_a100x8x4_37m.yaml
+++ b/configs/c4_a100x8x4_37m.yaml
@@ -10,10 +10,10 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 290 
-  steps:        2900 
-  steps_for_lr: 2900 
-  learning_rate: 7.3e-3
+  warmup_steps: 2900 
+  steps:        29000 
+  steps_for_lr: 29000 
+  learning_rate: 0.005400
   tokens:
     batch: 256
 
