Implementation of muP (#1)
* 37m base model, transfers to 270m, 1b models

* Zero initialize query and unembed

* Supports grad_clip

--- a/configs/c4_a100x8x4_37m_wide.yaml
+++ b/configs/c4_a100x8x4_37m_wide.yaml
@@ -1,4 +1,4 @@
-# python -m train --config-name=c4_a100x8x4_2b +paths.model_name=2b
+# python -m train --config-name=c4_a100x8x4_37m +paths.model_name=270m
 defaults:
 - c4_a100x8_base
 - _self_
@@ -6,35 +6,35 @@ defaults:
 num_hosts: 4
 
 mesh:
-  d: 16 
+  d: 16
   t: 1
 
 training:
-  warmup_steps: 18500
-  steps:        185000
-  steps_for_lr: 185000
+  warmup_steps: 290 
+  steps:        2900 
+  steps_for_lr: 2900 
   learning_rate: 7.3e-3
   tokens:
     batch: 256
   use_grad_clip: False
 
 model:
-  d_model: 4096
+  d_model: 256 
   n_q_per_kv: 1
-  n_kv: 16
-  d_head: 128
+  n_kv: 8 
+  d_head: 128 
   layers: 8
-  d_ff: 16384
+  d_ff: 2048 
   vocab: 32768
   rope_max_timescale: 10000
-  a_attn: 1. 
+  a_attn: 1.
   a_output: 1.
   base:
     d_model: 256 
     n_q_per_kv: 1
-    n_kv: 16 
-    d_head: 64 
+    n_kv: 8 
+    d_head: 128 
     layers: 8
     d_ff: 2048
- 
-checkpoint_interval: 2500
+
+checkpoint_interval: 9200
