--- a/configs/arxiv_v4-32_37m.yaml
+++ b/configs/arxiv_v4-32_37m.yaml
@@ -27,6 +27,11 @@ model:
   rope_max_timescale: 10000
   a_attn: 1.
   a_output: 1.
+  zero_unembed: true
+  zero_queries: true
+  window_size: 512 
+  attn_softcap:  50.0
+  final_softcap: 30.0
   base:
     d_model: 256 
     n_q_per_kv: 1
@@ -34,8 +39,5 @@ model:
     d_head: 64
     layers: 8
     d_ff: 2048
-  use_zero_init: true
-  window_size: 512 
-  attn_softcap:  50.0
-  final_softcap: 30.0
+
 checkpoint_interval: 9200
