--- a/configs/arxiv_v4-32_84m.yaml
+++ b/configs/arxiv_v4-32_84m.yaml
@@ -9,20 +9,20 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 290 
-  steps:        2900 
-  steps_for_lr: 2900 
-  learning_rate: 7.3e-3
-  tokens:
+  warmup_steps: 650 
+  steps:        6500
+  steps_for_lr: 6500
+  learning_rate: 1.0e-3
+  token1:
     batch: 256
 
 model:
-  d_model: 256 
+  d_model: 512
   n_q_per_kv: 1
-  n_kv: 16 
-  d_head: 64 
+  n_kv: 8
+  d_head: 128
   layers: 8
-  d_ff: 2048 
+  d_ff: 4096
   vocab: 32768
   rope_max_timescale: 10000
   a_attn: 1.
