--- a/configs/c4_a100x8x4_37m.yaml
+++ b/configs/c4_a100x8x4_37m.yaml
@@ -28,6 +28,8 @@ model:
   rope_max_timescale: 10000
   a_attn: 1.
   a_output: 1.
+  zero_queries: true
+  zero_unembed: true
   base:
     d_model: 256 
     n_q_per_kv: 1
