--- a/configs/c4_a100x8x4_13m.yaml
+++ b/configs/c4_a100x8x4_13m.yaml
@@ -28,12 +28,13 @@ model:
   rope_max_timescale: 10000
   a_attn: 1.
   a_output: 1.
+  zero_queries: true
+  zero_unembed: true
   base:
     d_model: 128
     n_q_per_kv: 1
     n_kv: 16 
     d_head: 32 
-    layers: 8
     d_ff: 1024 
   
 checkpoint_interval: 9200
