--- a/configs/c4_a100x8x4_235m_sp.yaml
+++ b/configs/c4_a100x8x4_235m_sp.yaml
@@ -1,4 +1,4 @@
-# python -m train --config-name=c4_a100x8x4_1b +paths.model_name=1b
+# python -m train --config-name=c4_a100x8_270m +paths.model_name=270m
 defaults:
 - c4_a100x8_base
 - _self_
@@ -10,20 +10,20 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 9250
-  steps:        92500
-  steps_for_lr: 92500
-  learning_rate: 7.3e-3  
+  warmup_steps: 2300
+  steps:        23000
+  steps_for_lr: 23000
+  learning_rate: 3.0e-4
   tokens:
     batch: 256
 
 model:
-  d_model: 2048
+  d_model: 1024
   n_q_per_kv: 1
   n_kv: 16
   d_head: 128
   layers: 8
-  d_ff: 16384
+  d_ff: 4096 
   vocab: 32768
   rope_max_timescale: 10000
   a_attn: 1.
@@ -31,10 +31,10 @@ model:
   zero_queries: true
   zero_unembed: true
   base:
-    d_model: 256 
+    d_model: 1024
     n_q_per_kv: 1
-    n_kv: 16 
-    d_head: 64 
-    d_ff: 2048
-  
-checkpoint_interval: 2500
+    n_kv: 16
+    d_head: 128
+    d_ff: 4096 
+ 
+checkpoint_interval: 9200
