new mup configs

--- a/configs/c4_a100x8x4_13m_wide.yaml
+++ b/configs/c4_a100x8x4_13m_wide.yaml
@@ -26,5 +26,15 @@ model:
   d_ff: 1024 
   vocab: 32768
   rope_max_timescale: 10000
+  a_attn: 1.
+  a_output: 1.
+  zero_queries: true
+  zero_unembed: true
+  base:
+    d_model: 128
+    n_q_per_kv: 1
+    n_kv: 8 
+    d_head: 64 
+    d_ff: 1024 
 
 checkpoint_interval: 9200
