--- a/configs/c4_a100x8x4_mup_235m_12m.yaml
+++ b/configs/c4_a100x8x4_mup_235m_12m.yaml
@@ -13,9 +13,10 @@ training:
   warmup_steps: 2300
   steps:        23000
   steps_for_lr: 23000
-  learning_rate: 3.0e-3
+  learning_rate: 3.0e-2
   tokens:
     batch: 256
+  use_grad_clip: true
 
 model:
   d_model: 1024
@@ -31,10 +32,11 @@ model:
   zero_queries: true
   zero_unembed: true
   base:
-    d_model: 1024
+    d_model: 128
     n_q_per_kv: 1
-    n_kv: 16
-    d_head: 128
-    d_ff: 4096 
+    n_kv: 16 
+    d_head: 32 
+    d_ff: 512 
+  
  
 checkpoint_interval: 9200
