--- a/configs/c4_a100x8x4_13m.yaml
+++ b/configs/c4_a100x8x4_13m.yaml
@@ -28,13 +28,15 @@ model:
   rope_max_timescale: 10000
   a_attn: 1.
   a_output: 1.
-  zero_queries: true
-  zero_unembed: true
+  zero_queries: false
+  zero_unembed: false 
   base:
     d_model: 128
     n_q_per_kv: 1
     n_kv: 16 
     d_head: 32 
     d_ff: 1024 
-  
+  parameterization: "sp" 
+
+
 checkpoint_interval: 9200
