--- a/configs/c4_a100x8x4_270m.yaml
+++ b/configs/c4_a100x8x4_270m.yaml
@@ -13,7 +13,7 @@ training:
   warmup_steps: 2300
   steps:        23000
   steps_for_lr: 23000
-  learning_rate: 7.3e-3
+  learning_rate: 8.0e-4
   tokens:
     batch: 256
 
@@ -28,14 +28,14 @@ model:
   rope_max_timescale: 10000
   a_attn: 1.
   a_output: 1.
-  zero_queries: true
-  zero_unembed: true
+  zero_queries: false 
+  zero_unembed: false 
   base:
-    d_model: 256 
+    d_model: 1024
     n_q_per_kv: 1
-    n_kv: 16 
-    d_head: 64 
-    layers: 8
-    d_ff: 2048
-  
+    n_kv: 16
+    d_head: 128
+    d_ff: 8192
+  parameterization: "sp"
+    
 checkpoint_interval: 9200
