--- a/requirements-tpu.txt
+++ b/requirements-tpu.txt
@@ -12,3 +12,4 @@ typeguard==4.1.5
 transformers  # For Huggingface data loader
 datasets      # For Huggingface data loader
 torch[cpu]    # For Huggingface data loader
+optuna
