--- a/configs/c4_a100x8x4_37m.yaml
+++ b/configs/c4_a100x8x4_37m.yaml
@@ -37,5 +37,8 @@ model:
     d_head: 64
     d_ff: 2048
   parameterization: "sp" 
+  gamma_embed: 1. 
+  gamma_hidden: 1.
+  gamma_unembed: 1.
 
 checkpoint_interval: 9200
