--- a/configs/c4_a100x8x4_37m.yaml
+++ b/configs/c4_a100x8x4_37m.yaml
@@ -37,8 +37,8 @@ model:
     d_head: 64
     d_ff: 2048
   parameterization: "sp" 
-  gamma_embed: 0.1955897517378221
-  gamma_hidden: 1.9109768222244505
-  gamma_unembed: 1.3310562699950117
+  gamma_embed: 6.253977
+  gamma_hidden: 1.484847 
+  gamma_unembed: 1.489783
 
 checkpoint_interval: 9200
