--- a/configs/c4_a100x8x4_37m.yaml
+++ b/configs/c4_a100x8x4_37m.yaml
@@ -37,8 +37,8 @@ model:
     d_head: 64
     d_ff: 2048
   parameterization: "sp" 
-  gamma_embed: 6.253977
-  gamma_hidden: 1.484847 
-  gamma_unembed: 1.489783
+  gamma_embed: 6.2539770944178406
+  gamma_hidden: 1.4848467942851378 
+  gamma_unembed: 1.4897826620883678
 
 checkpoint_interval: 9200
