--- a/configs/c4_a100x8x4_2b.yaml
+++ b/configs/c4_a100x8x4_2b.yaml
@@ -16,7 +16,7 @@ training:
   learning_rate: 7.3e-3
   tokens:
     batch: 256
-  use_grad_clip: False
+  use_grad_clip: true 
 
 model:
   d_model: 4096
@@ -29,12 +29,15 @@ model:
   rope_max_timescale: 10000
   a_attn: 1. 
   a_output: 1.
+  zero_queries: true
+  zero_unembed: true
   base:
     d_model: 256 
     n_q_per_kv: 1
     n_kv: 16 
-    d_head: 64 
+    d_head: 64
     layers: 8
     d_ff: 2048
- 
+
+
 checkpoint_interval: 2500
