--- a/configs/c4_a100x8x4_1b.yaml
+++ b/configs/c4_a100x8x4_1b.yaml
@@ -13,9 +13,10 @@ training:
   warmup_steps: 9250
   steps:        92500
   steps_for_lr: 92500
-  learning_rate: 7.3e-3  
+  learning_rate: 1.0e-5 
   tokens:
     batch: 256
+  use_grad_clip: true 
 
 model:
   d_model: 2048
@@ -36,5 +37,10 @@ model:
     n_kv: 16 
     d_head: 64 
     d_ff: 2048
-  
+  parameterization: "sp" 
+  fully_aligned: false
+  gamma_embed: 1.
+  gamma_hidden: 1. 
+  gamma_unembed: 1. 
+
 checkpoint_interval: 2500
