--- a/configs/c4_a100x8x4_2b.yaml
+++ b/configs/c4_a100x8x4_2b.yaml
@@ -36,7 +36,11 @@ model:
     n_q_per_kv: 1
     n_kv: 16
     d_head: 128
-    layers: 8
     d_ff: 16384
+  parameterization: "sp"
+  fully_aligned: false
+  gamma_embed: 1.
+  gamma_hidden: 1. 
+  gamma_unembed: 1.
 
 checkpoint_interval: 2500
