get 13m in line with rest of the model configs

--- a/configs/c4_a100x8x4_13m.yaml
+++ b/configs/c4_a100x8x4_13m.yaml
@@ -16,6 +16,7 @@ training:
   learning_rate: 3.0e-2
   tokens:
     batch: 256
+  use_grad_clip: true
 
 model:
   d_model: 128
@@ -28,7 +29,7 @@ model:
   rope_max_timescale: 10000
   a_attn: 1.
   a_output: 1.
-  zero_queries: false
+  zero_queries: true 
   zero_unembed: false 
   base:
     d_model: 128
@@ -37,6 +38,7 @@ model:
     d_head: 32 
     d_ff: 1024 
   parameterization: "sp" 
+  fully_aligned: false
   gamma_embed: 0.24208930452006025 
   gamma_hidden: 0.8381750357690096 
   gamma_unembed: 0.40928648131713624 
