--- a/configs/c4_a100x8x4_13m.yaml
+++ b/configs/c4_a100x8x4_13m.yaml
@@ -30,7 +30,7 @@ model:
   a_attn: 1.
   a_output: 1.
   zero_queries: true 
-  zero_unembed: false 
+  zero_unembed: true 
   base:
     d_model: 128
     n_q_per_kv: 1
