--- a/configs/local_test_synthetic.yaml
+++ b/configs/local_test_synthetic.yaml
@@ -33,6 +33,12 @@ model:
     n_kv: 2
     d_head: 32
     d_ff: 1024
+  parameterization: "sp" 
+  fully_aligned: false
+  gamma_embed: 1. 
+  gamma_hidden: 1. 
+  gamma_unembed: 1. 
+
 
 paths:
   root_working_dir: '/tmp'
