--- a/configs/c4_a100x8x4_1b.yaml
+++ b/configs/c4_a100x8x4_1b.yaml
@@ -37,5 +37,10 @@ model:
     n_kv: 16 
     d_head: 64 
     d_ff: 2048
-  
+  parameterization: "sp" 
+  fully_aligned: false
+  gamma_embed: 1.
+  gamma_hidden: 1. 
+  gamma_unembed: 1. 
+
 checkpoint_interval: 2500
