--- a/configs/c4_a100x8x4_270m.yaml
+++ b/configs/c4_a100x8x4_270m.yaml
@@ -37,5 +37,10 @@ model:
     n_kv: 16
     d_head: 128
     d_ff: 8192
-  
+  parameterization: "sp"
+  fully_aligned: false
+  gamma_embed: 1.
+  gamma_hidden: 1. 
+  gamma_unembed: 1.
+   
 checkpoint_interval: 9200
