--- a/configs/c4_a100x8x4_37m.yaml
+++ b/configs/c4_a100x8x4_37m.yaml
@@ -1,4 +1,4 @@
-# python -m train --config-name=c4_a100x8x4_37m +paths.model_name=270m
+# python -m train --config-name=c4_a100x8x4_37m +paths.model_name=37m
 defaults:
 - c4_a100x8_base
 - _self_
@@ -37,5 +37,10 @@ model:
     n_kv: 16 
     d_head: 64
     d_ff: 2048
+  parameterization: "sp" 
+  fully_aligned: false
+  gamma_embed: 6.2539770944178406
+  gamma_hidden: 1.4848467942851378 
+  gamma_unembed: 1.4897826620883678
 
 checkpoint_interval: 9200
