--- a/configs/synthetic_rtx4090_15m.yaml
+++ b/configs/synthetic_rtx4090_15m.yaml
@@ -10,33 +10,34 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 110
-  steps:        1100
-  steps_for_lr: 1100
-  learning_rate: 5.0e-3
+  warmup_steps: 290 
+  steps:        2900 
+  steps_for_lr: 2900 
+  learning_rate: 3.0e-3 
   tokens:
-    batch: 64 
+    batch: 256 
+    len: 128 
   use_grad_clip: true
 
 model:
-  d_model: 128
+  d_model: 256 
   n_q_per_kv: 1
   n_kv: 16 
-  d_head: 32 
+  d_head: 64 
   layers: 8
-  d_ff: 512 
-  vocab: 47 
+  d_ff: 1024 
+  vocab: 49 
   rope_max_timescale: 10000
   a_attn: 1.
   a_output: 1.
   zero_queries: true
   zero_unembed: true
   base:
-    d_model: 128
+    d_model: 256 
     n_q_per_kv: 1
     n_kv: 16 
-    d_head: 32 
-    d_ff: 512 
+    d_head: 64 
+    d_ff: 1024 
   parameterization: "sp" 
   fully_aligned: false
   gamma_embed: 1. 
