--- a/configs/synthetic_rtx4090_4m.yaml
+++ b/configs/synthetic_rtx4090_4m.yaml
@@ -10,12 +10,13 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 110
-  steps:        1100
-  steps_for_lr: 1100
+  warmup_steps: 250
+  steps:        2500
+  steps_for_lr: 2500
   learning_rate: 5.0e-3
   tokens:
-    batch: 64 
+    len: 128
+    batch: 256
   use_grad_clip: true
 
 model:
