cope runs, need to validate

--- a/configs/local_test_synthetic.yaml
+++ b/configs/local_test_synthetic.yaml
@@ -23,6 +23,7 @@ model:
   vocab: 32768 
   d_ff: 1024
   rope_max_timescale: 256
+  cope_n_pos_max: 64
   a_attn: 1
   a_output: 1
   zero_queries: true
