--- a/configs/local_test_synthetic.yaml
+++ b/configs/local_test_synthetic.yaml
@@ -24,6 +24,9 @@ model:
   d_ff: 1024
   rope_max_timescale: 256
   cope_n_pos_max: 64
+  apply_cope: true
+  apply_rope: true
+
   a_attn: 1
   a_output: 1
   zero_queries: true
