--- a/configs/synthetic_rtx4090_15m.yaml
+++ b/configs/synthetic_rtx4090_15m.yaml
@@ -15,7 +15,7 @@ training:
   steps_for_lr: 9000
   learning_rate: 3.0e-3 
   tokens:
-    batch: 64 
+    batch: 32 
     len: 512
   use_grad_clip: true
   use_gpu: true
@@ -25,20 +25,27 @@ model:
   n_q_per_kv: 1
   n_kv: 16 
   d_head: 64 
-  layers: 8
   d_ff: 1024 
+  layers: 8
   vocab: 49 
-  rope_max_timescale: 10000
-  a_attn: 1.
-  a_output: 1.
-  zero_queries: true
-  zero_unembed: true
+
   base:
     d_model: 256 
     n_q_per_kv: 1
     n_kv: 16 
     d_head: 64 
     d_ff: 1024 
+
+  rope_max_timescale: 10000
+  cope_n_pos_max: 64
+  apply_cope: true
+  apply_rope: true
+
+  a_attn: 1.
+  a_output: 1.
+  zero_queries: true
+  zero_unembed: true
+
   parameterization: "sp" 
   fully_aligned: false
   gamma_embed: 1. 
