--- a/configs/wikitext103_rtx4090_31m.yaml
+++ b/configs/wikitext103_rtx4090_31m.yaml
@@ -10,13 +10,14 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 290 
-  steps:        2900 
-  steps_for_lr: 2900 
+  warmup_steps: 4800 
+  steps:        48000 
+  steps_for_lr: 48000
   learning_rate: 7.3e-3
   use_gpu: true
   tokens:
-    batch: 256 
+    len: 512
+    batch: 32 
 
 model:
   d_model: 256 
