--- a/configs/local_test_synthetic.yaml
+++ b/configs/local_test_synthetic.yaml
@@ -27,7 +27,7 @@ model:
 
   # parameters for mixattention
   window_size: 16 
-  n_shared_cache: 2
+  n_kv_reuses: 2
   shared_kv_idx:
     - 0
     - 1 
