--- a/configs/synthetic_cpu_225k.yaml
+++ b/configs/synthetic_cpu_225k.yaml
@@ -10,12 +10,13 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 110
-  steps:        1100
-  steps_for_lr: 1100
+  warmup_steps: 10 
+  steps:        100
+  steps_for_lr: 100
   learning_rate: 3.0e-2
   tokens:
     batch: 64 
+    len: 512
   use_grad_clip: true
   use_gpu: false
 
@@ -24,20 +25,36 @@ model:
   n_q_per_kv: 1
   n_kv: 1 
   d_head: 32 
-  layers: 1
+  layers: 4
   d_ff: 512 
   vocab: 49 
+
   rope_max_timescale: 10000
+
+  # parameters for mixattention
+  window_size: 16 
+  n_kv_reuses: 2
+  shared_kv_idx:
+    - 0
+    - 1
+    - 1 
+    - 0
+  sa_layers:
+    - 0 
+    - 3
+
   a_attn: 1.
   a_output: 1.
   zero_queries: true
   zero_unembed: true
+
   base:
     d_model: 128
     n_q_per_kv: 1
     n_kv: 1 
     d_head: 32 
     d_ff: 512 
+
   parameterization: "sp" 
   fully_aligned: false
   gamma_embed: 1. 
