--- a/configs/synthetic_rtx4090_1b.yaml
+++ b/configs/synthetic_rtx4090_1b.yaml
@@ -1,4 +1,4 @@
-# python -m train --config-name=c4_a100x8x4_10m +paths.model_name=270m
+# python -m train --config-name=c4_a100x8x4_1b +paths.model_name=1b
 defaults:
 - synthetic_base
 - _self_
@@ -10,32 +10,32 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 900
-  steps:        9000
-  steps_for_lr: 9000
-  learning_rate: 3.0e-3 
+  warmup_steps: 9250
+  steps:        92500
+  steps_for_lr: 92500
+  learning_rate: 1.0e-5 
   tokens:
-    batch: 64 
-    len: 512
-  use_grad_clip: true
+    batch: 256
+    len: 1024
+  use_grad_clip: true 
   use_gpu: true
 
 model:
-  d_model: 256 
+  d_model: 2048
   n_q_per_kv: 1
-  n_kv: 16 
-  d_head: 64 
-  d_ff: 1024 
-  vocab: 49 
+  n_kv: 16
+  d_head: 128
+  d_ff: 8192
+  vocab: 49
   layers: 8
 
   base:
-    d_model: 256 
+    d_model: 2048
     n_q_per_kv: 1
-    n_kv: 16 
-    d_head: 64 
-    d_ff: 1024 
-
+    n_kv: 16
+    d_head: 128
+    d_ff: 8192
+ 
   rope_max_timescale: 10000
 
   # parameters for mixattention
@@ -63,8 +63,8 @@ model:
   # parameters for exp scaling
   parameterization: "sp" 
   fully_aligned: false
-  gamma_embed: 1. 
+  gamma_embed: 1.
   gamma_hidden: 1. 
-  gamma_unembed: 1.
-  
-checkpoint_interval: 9200
+  gamma_unembed: 1. 
+
+checkpoint_interval: 2500
