use external drive for model checkpoints

--- a/configs/wikitext103_base.yaml
+++ b/configs/wikitext103_base.yaml
@@ -31,7 +31,7 @@ hf_dataset:
 
 paths:
   # root_working_dir can also be a path on a local filesystem
-  root_working_dir: "/tmp"
+  root_working_dir: "/media/clankur/HDD/models"
 
 num_hosts: 1
 
