--- a/configs/synthetic_v4-32_15m.yaml
+++ b/configs/synthetic_v4-32_15m.yaml
@@ -10,14 +10,15 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 900
-  steps:        9000 
-  steps_for_lr: 9000 
-  learning_rate: 7.3e-3
+  warmup_steps: 1800
+  steps:        18000
+  steps_for_lr: 18000
+  learning_rate: 3.0e-3 
   tokens:
-    batch: 32
+    batch: 16 
+    len: 512
   use_grad_clip: true
-
+ 
 model:
   d_model: 256
   n_q_per_kv: 1
@@ -55,4 +56,3 @@ checkpoint_interval: 9200
 paths:
   # root_working_dir can also be a path on a local filesystem
   root_working_dir: "/tmp"
-
