--- a/configs/synthetic_v4-32_15m.yaml
+++ b/configs/synthetic_v4-32_15m.yaml
@@ -10,13 +10,15 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 290 
-  steps:        2900 
-  steps_for_lr: 2900 
-  learning_rate: 7.3e-3
+  warmup_steps: 900
+  steps:        9000 
+  steps_for_lr: 9000 
+  learning_rate: 1.5e-3
   tokens:
     batch: 32
   use_grad_clip: true
+  use_gpu: false 
+  use_checkpoint: false 
 
 model:
   d_model: 256
