--- a/configs/synthetic_v4-32_15m.yaml
+++ b/configs/synthetic_v4-32_15m.yaml
@@ -10,12 +10,13 @@ mesh:
   t: 1
 
 training:
-  warmup_steps: 900
-  steps:        9000 
-  steps_for_lr: 9000 
+  warmup_steps: 120
+  steps:        1200
+  steps_for_lr: 1200 
   learning_rate: 1.5e-3
   tokens:
-    batch: 32
+    batch: 256
+    len: 1024
   use_grad_clip: true
   use_gpu: false 
   use_checkpoint: false 
