--- a/configs/synthetic_v4-32_15m.yaml
+++ b/configs/synthetic_v4-32_15m.yaml
@@ -56,3 +56,6 @@ paths:
   # root_working_dir can also be a path on a local filesystem
   root_working_dir: "/tmp"
 
+synthetic_dataset:
+  batch_pool_size: 8
+  num_workers: 16
