--- a/configs/synthetic_base.yaml
+++ b/configs/synthetic_base.yaml
@@ -20,12 +20,11 @@ training:
   learning_rate: 3.e-4
   cosine_learning_rate_final_fraction: 0.1
   use_grad_clip: true
-  use_checkpoint: true
 
 
 paths:
   # root_working_dir can also be a path on a local filesystem
-  root_working_dir: "/media/clankur/HDD/models"
+  root_working_dir: "/tmp" 
 
 num_hosts: 1
 
