double context length

--- a/configs/slim_v4-32_31m.yaml
+++ b/configs/slim_v4-32_31m.yaml
@@ -15,6 +15,7 @@ training:
   steps_for_lr: 2400
   learning_rate: 1.35e-2
   tokens:
+    length: 2048
     batch: 256
   use_grad_clip: true
   use_gpu: false
