--- a/configs/hf_base.yaml
+++ b/configs/hf_base.yaml
@@ -1,13 +1,20 @@
 defaults:
-  - hf_base
   - _self_
 
-training:
-  seed: 0
-  tokens:
-    batch: 64
-    len: 1024
+num_hosts: 4
 
+mesh:
+  d: 16
+  t: 1
+
+training:
+  warmup_steps: 240
+  steps: 2400
+  steps_for_lr: 2400
+  tokens:
+    length: 8192
+    batch: 256
+  
   # AdamW optimizer parameters
   # We use AdamW following Llama2's training details, see https://arxiv.org/pdf/2307.09288.pdf section 2.2
   adam_b1: 0.95 # Exponential decay rate to track the first moment of past gradients.
@@ -15,19 +22,23 @@ training:
   adam_eps: 1.e-8 # A small constant applied to denominator outside of the square root.
   adam_eps_root: 0. # A small constant applied to denominator inside the square root.
   weight_decay: 0.1 # AdamW Weight decay
+
   # We take inspiration from Llama2's learning rate (LR) schedule, see https://arxiv.org/pdf/2307.09288.pdf section 2.2
   # Learning rate schedule has two parts:
   # 1) Linear warmup from 0 to [learning_rate] over steps 0 to [learning_rate_schedule_steps * warmup_steps_fraction]
   # 2) Cosine decay from [learning_rate] to [learning_rate * cosine_learning_rate_final_fraction] from warmup to learning_rate_schedule_steps
-
-  # Learning rate is not yet tuned.
-  learning_rate: 3.e-4
+  
+  learning_rate: 1.35e-2
   cosine_learning_rate_final_fraction: 0.1
   use_grad_clip: true
   use_gpu: false
+  use_single_pod: false
+
+model:
+  vocab: 32768
+  rope_max_timescale: 10000
 
 hf_dataset:
-  path: bigcode/starcoderdata
   name: default
   num_workers: 1
   tokenizer: mistralai/Mistral-7B-v0.1 # may require huggingface-cli login
@@ -39,11 +50,7 @@ paths:
   # root_working_dir can also be a path on a local filesystem
   root_working_dir: "/tmp/"
 
-num_hosts: 1
-
-mesh:
-  d: 8
-  t: 1
-
 io:
   max_io_threads: 1024
+
+checkpoint_interval: 9200 
